--- a/mobile/package.json
+++ b/mobile/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "date-fns": "^4.1.0",
     "expo": "~54.0.2",
     "expo-constants": "~18.0.8",
     "expo-font": "~14.0.8",
@@ -25,6 +26,7 @@
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.1",
     "expo-splash-screen": "~31.0.9",
+    "expo-sqlite": "^16.0.8",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
